--- a/docs/base-chain/quickstart/connecting-to-base.mdx
+++ b/docs/base-chain/quickstart/connecting-to-base.mdx
@@ -36,6 +36,44 @@ L1 & L2 protocol and network-related smart contract deployments can be found on 
 For production systems, we recommend using a node from one of our [node partners](/base-chain/tools/node-providers), or [running your own Base node](/base-chain/node-operators/run-a-base-node).
 </Note>
 
+## Real-time access: WebSockets & Flashblocks
+
+To interact with Base in **real time** (subscribe to new blocks, logs, or pending transactions), you can use a WebSocket connection from your RPC provider.  
+For **ultra-fast UX** with ~200 ms pre-confirmations, Base supports **Flashblocks**.
+
+### WebSocket example (using viem)
+
+```ts filename="ws-client.ts"
+import { createPublicClient, webSocket } from 'viem'
+import { base } from 'viem/chains'
+
+const client = createPublicClient({
+  chain: base,
+  transport: webSocket('<YOUR_PROVIDER_WSS_URL>') // get WSS URL from your RPC provider
+})
+
+client.watchBlocks({
+  onBlock: (block) => console.log('new block', block.number)
+})
+Most RPC providers — for example Alchemy, Infura, QuickNode, Chainstack, or dRPC — supply private WSS endpoints along with their HTTPS RPC URLs.
+Use those WebSocket endpoints for live subscriptions.
+
+Flashblocks pre-confirmations
+
+Flashblocks offer ~200 ms pre-confirmations that allow applications to show near-instant feedback while awaiting final inclusion in a block.
+
+| Network     | Flashblocks HTTP RPC               | Flashblocks WebSocket                   |
+| :---------- | :--------------------------------- | :-------------------------------------- |
+| **Mainnet** | `https://mainnet-preconf.base.org` | `wss://mainnet.flashblocks.base.org/ws` |
+| **Sepolia** | `https://sepolia-preconf.base.org` | `wss://sepolia.flashblocks.base.org/ws` |
+
+<Note>
+Public preconfirmation endpoints are rate-limited and intended for testing or prototypes.  
+For production workloads, use a **dedicated Flashblocks-aware RPC** from your node provider.
+</Note>
+
+For more details, see [Flashblocks overview & RPC](https://docs.base.org/flashblocks/rpc) and [Flashblocks for node providers](https://docs.base.org/flashblocks/node-providers).
+
 # Using Base with your wallet
 
 ### Coinbase Wallet
